# env2bws

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  sample.env  sample.json
.github/workflows/: release-plz.yml  rust.yml  upload-assets.yml
src/: cli.rs  dotenv.rs  env_var.rs  import_payload.rs  lib.rs  main.rs
